# producent-consument-parallel-cpp

./: CMakeLists.txt  main.c  main_cond_vars.c
